# smartstore-chatbot

./: .gitignore  Dockerfile  Dockerfile.gradio  README.md  docker-compose.milvus.yml  docker-compose.yml  nginx.conf  pyproject.toml
app/: main.py  webui.py  webui.py.bak
app/tests/: milvus_healthcheck.py
app/api/: chat.py  devops.py  health.py  user.py
app/core/: config.py  exceptions.py  logger.py  prompts.py
app/datasets/csv/: final_result.csv
app/repositories/: milvus_repo.py  redis_repo.py
app/schemas/: milvus_smartstore_faq.py
app/services/: chatbot_service.py  embedding.py  embedding_service.py  filter.py  preprocess.py  preprocess_service.py  rag.py  session_service.py
app/tests/: milvus_healthcheck.py
app/utils/: embedding.py
app/workers/: __init__.py  tasks.py
datasets/processed_csv/: final_result.csv
locust/: docker-compose.yml  locustfile.py
volumes/logs/: chatbot_2025-06-26.log.2025-06-26
volumes/milvus/rdb_data/: 000022.sst  000043.sst  000049.sst  000055.sst  000066.sst  000079.sst  000085.sst  000091.sst  000104.sst  000122.sst  000128.sst  IDENTITY  LOG  LOG.old.1750067663613973  LOG.old.1750152288755519  LOG.old.1750154192851365  LOG.old.1750305108498939  LOG.old.1750310220981565  LOG.old.1750310908996927  LOG.old.1750312252513776  LOG.old.1750312540576292  LOG.old.1750315381436023  LOG.old.1750326353659390  LOG.old.1750326567389122  LOG.old.1750327091107287  LOG.old.1750332107043067  LOG.old.1750332979107233  LOG.old.1750395072289227  LOG.old.1750937802097152  (+8 more)
volumes/rabbitmq/: .erlang.cookie
volumes/redis/: dump.rdb
(+254 files in other folders)
