[tool.poetry]
name = "smartstore-chatbot"
version = "0.0.1"
description = "스마트스토어 챗봇"
authors = [
    "tasha"
]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = {extras = ["standard"], version = ">=0.34.3,<0.35.0"}
gradio = ">=5.34.0,<6.0.0"
pymilvus = "^2.5.11"
pandas = "^2.3.0"
openai = "^1.86.0"
redis = "^6.2.0"
pika = "^1.3.2"
pydantic-settings = "^2.9.1"
tqdm = "^4.67.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
